# user_behaviour_tracking

./: .gitignore  ARCHITECTURE.md  README.md  captured_events.jsonl  main.py  pyproject.toml
apps/behavior-collector/: README.md  index.html  package-lock.json  package.json  vite.config.js
apps/behavior-collector/src/: App.jsx  content.js  styles.css
src/: config.py  dataset.py  evaluate.py  export_onnx.py  features.py  generate_dummy_data.py  model.py  preprocess.py  schemas.py  stream_inference.py  test_onnx.py  train.py  web_api.py
