[project]
name = "user-behavior-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
